<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_slashscreen1"
    tools:context=".Daftar">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_daftar"
        android:fontFamily="@font/poppinsbold"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginTop="180dp"
        android:textSize="24sp"
        android:id="@+id/txt_daftar"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/form"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/txt_daftar"
        android:layout_marginTop="10dp"
        android:hint="@string/txt_nama"
        android:textSize="15sp"
        android:fontFamily="@font/poppinsreg"
        android:paddingLeft="30dp"
        android:drawableStart="@drawable/profil"
        android:drawablePadding="20dp"
        android:drawableTint="#FF9F47"
        android:id="@+id/txt_nama"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/form"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/txt_nama"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:textSize="15sp"
        android:fontFamily="@font/poppinsreg"
        android:paddingLeft="30dp"
        android:drawableStart="@drawable/email"
        android:drawablePadding="20dp"
        android:drawableTint="#FF9F47"
        android:inputType="textEmailAddress"
        android:id="@+id/txt_email_daftar"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/form"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/txt_email_daftar"
        android:layout_marginTop="10dp"
        android:hint="@string/txt_nomor_telepon"
        android:textSize="15sp"
        android:fontFamily="@font/poppinsreg"
        android:paddingLeft="30dp"
        android:drawableStart="@drawable/profil"
        android:drawablePadding="20dp"
        android:drawableTint="#FF9F47"
        android:inputType="number"
        android:id="@+id/txt_nohp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/form"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/txt_nohp"
        android:layout_marginTop="10dp"
        android:hint="@string/txt_sandi_daftar"
        android:textSize="15sp"
        android:fontFamily="@font/poppinsreg"
        android:paddingLeft="30dp"
        android:drawableStart="@drawable/katasandi"
        android:drawablePadding="20dp"
        android:drawableTint="#FF9F47"
        android:inputType="textPassword"
        android:id="@+id/txt_katasandi_daftar"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/form"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/txt_katasandi_daftar"
        android:layout_marginTop="10dp"
        android:hint="@string/ulangi_kata_sandi"
        android:textSize="15sp"
        android:fontFamily="@font/poppinsreg"
        android:paddingLeft="30dp"
        android:drawableStart="@drawable/katasandi"
        android:drawablePadding="20dp"
        android:drawableTint="#FF9F47"
        android:inputType="textPassword"
        android:id="@+id/txt_ulangsandi"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_below="@+id/txt_ulangsandi"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/txt_setuju"
        android:fontFamily="@font/poppinsreg"
        android:textSize="10sp"
        android:id="@+id/checkbox"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/checkbox"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:text="@string/txt_daftar1"
        android:textStyle="bold"
        android:textSize="17sp"
        android:background="@drawable/button_next"
        android:textAllCaps="false"
        android:fontFamily="@font/poppinsreg"
        android:id="@+id/btn_daftar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_sudah_punya_akun"
        android:textColor="#000000"
        android:fontFamily="@font/poppinsreg"
        android:textSize="16sp"
        android:layout_below="@+id/btn_daftar"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:id="@+id/txt_sudahakun"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masuk_daridaftar"
        android:textColor="#FF9F47"
        android:fontFamily="@font/poppinsreg"
        android:textSize="16sp"
        android:layout_below="@+id/txt_sudahakun"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:id="@+id/txt_masuk_daridaftar"/>

</RelativeLayout>