<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_slashscreen1"
    tools:context=".SlashScreenKetiga">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:src="@drawable/gambarslash3"
        android:id="@+id/img_slashscreen3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_bawa_kembali"
        android:textSize="24sp"
        android:textColor="#000000"
        android:fontFamily="@font/poppinsbold"
        android:layout_below="@+id/img_slashscreen3"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:id="@+id/txt_bawakembali"/>

    <TextView
        android:id="@+id/txt_deskbawakembali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_bawakembali"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/txt_slashketiga"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/txt_deskbawakembali"
        android:layout_marginTop="15dp"
        android:layout_centerInParent="true"
        android:text="@string/mulai"
        android:textStyle="bold"
        android:textSize="17sp"
        android:background="@drawable/button_next"
        android:textAllCaps="false"
        android:fontFamily="@font/poppinsreg"
        android:id="@+id/btn_mulai"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/loadbar3"
        android:layout_below="@+id/btn_mulai"
        android:layout_marginTop="20dp"
        android:id="@+id/loadbar3"/>

</RelativeLayout>